# OpenGL-lab

./: CMakeLists.txt
src/lib/: CMakeLists.txt  lib.h
src/main/: CMakeLists.txt  main.cpp
src/openGL_module/: CMakeLists.txt  gl.h
